--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <p class="contact-sub">Napíš alebo zavolaj</p>
 
     <div class="contact-actions">
-      <a href="https://www.instagram.com/lashbrowbar.sk/"
+      <a href="https://www.instagram.com/na.studio.sk/"
          target="_blank" rel="noopener"
          class="contact-btn instagram">
         Napísať na Instagram
