--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </p>
 
     <div class="hero-buttons">
-      <a class="btn btn-primary" href="#reservovat">Rezervovať termín</a>
+      <a class="btn btn-primary" href="#rezervacia">Rezervovať termín</a>
       <a class="btn btn-outline" href="#sluzby">Služby a cenník</a>
     </div>
   </div>
@@ -174,7 +174,7 @@
   </div>
 </section>
 
-<section class="booking" id="rezervovat">
+<section class="booking" id="rezervacia">
   <div class="booking-wrap">
 
     <h2>Rezervovať termín</h2>
